--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "codegraded-project-react",
   "version": "0.0.1",
+  "homepage": "https://Gabriel-Velez.github.io/web-module-project-async-redux",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
     "start": "webpack serve --open",
     "test": "cross-env NODE_ENV=testing jest --verbose --forceExit"
   },
@@ -22,6 +26,7 @@
     "eslint": "7.29.0",
     "eslint-plugin-react": "7.26.1",
     "fkill-cli": "7.0.0",
+    "gh-pages": "^3.2.3",
     "html-loader": "3.0.1",
     "html-webpack-plugin": "5.5.0",
     "jest": "27.3.1",
@@ -47,11 +52,27 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.32.8",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.3",
     "webpack-cli": "^4.9.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "resolutions": {
+    "webpack": "5.66.0"
   }
 }
